Highlighting of last added or duplicate asset on the Configuration page

--- a/src/app/configuration/custom-assets/custom-assets.component.html
+++ b/src/app/configuration/custom-assets/custom-assets.component.html
@@ -1,7 +1,9 @@
 <h3>Custom assets</h3>
 <hr/>
 <div id="customAssetsList" class="valueList">
-    <div *ngFor="let asset of customAssets" id="{{asset.code}}-{{asset.issuer.address}}" class="customItemRow">
+    <div *ngFor="let asset of customAssets" id="{{asset.code}}-{{asset.issuer.address}}" class="customItemRow"
+         [class.highlight]="null != lastAddedAsset && asset.code === lastAddedAsset.code && asset.issuer.address === lastAddedAsset.issuer.address"
+         [class.duplicate]="duplicateAsset === (asset.code + '-' + asset.issuer.address)">
         <div class="itemTitle">{{asset.code}}-{{asset.issuer.domain}} ({{asset.issuer.address}})</div>
         <span (click)="removeAsset(asset.code, asset.issuer.address)">remove</span>
     </div>
