--- a/src/app/exchange/exchange.component.css
+++ b/src/app/exchange/exchange.component.css
@@ -107,3 +107,8 @@ mat-form-field {
     background-repeat: no-repeat;
     background-size: 32px 32px;
 }
+.selectedIssuerOption {
+    height: 38px;
+    line-height: 38px;
+    padding-left: 5px;
+}
