--- a/src/app/exchange/exchange.component.html
+++ b/src/app/exchange/exchange.component.html
@@ -9,7 +9,7 @@
 
 
         <mat-form-field style="width: 150px;">
-            <mat-select [(value)]="selectedBaseAssetCode" class="selectedAssetCode" (selectionChange)="debug_todo($event)"
+            <mat-select [(value)]="selectedBaseAssetCode" class="selectedAssetCode" (selectionChange)="assetCodeChanged($event)"
                         [title]="selectedBaseAssetCode != null ? selectedBaseAssetCode.tooltip : 'select asset type...'"
                         [ngStyle]="{
                             'background-image': selectedBaseAssetCode ? 'url(./assets/images/asset_icons/' + selectedBaseAssetCode.value + '.png' : '',
@@ -47,7 +47,7 @@
 <!--          <div id="counterAssetCodeDd">Asset code drop-down here</div>  -->
 
         <mat-form-field style="width: 150px; float: left;">
-            <mat-select [(value)]="selectedCounterAssetCode" class="selectedAssetCode" (selectionChange)="debug_todo($event)"
+            <mat-select [(value)]="selectedCounterAssetCode" class="selectedAssetCode" (selectionChange)="assetCodeChanged($event)"
                         [title]="selectedCounterAssetCode != null ? selectedCounterAssetCode.tooltip : 'select asset type...'"
                         [ngStyle]="{
                             'background-image': selectedCounterAssetCode ? 'url(./assets/images/asset_icons/' + selectedCounterAssetCode.value + '.png' : '',
