--- a/src/app/exchange/exchange.component.css
+++ b/src/app/exchange/exchange.component.css
@@ -17,7 +17,7 @@
 }
 
 .dropdownsWrapper {
-    width:450px;
+    width:410px;
     height: 45px;
     float: left;
 }
@@ -34,8 +34,9 @@ div.chartButton {
 }
 
 div.swapButton {
+    margin-right: 5px;
+    width: 40px;
     font-weight: bold;
-    width: 45px;
     text-align: center;
 }
 div.swapButton>a {
@@ -89,7 +90,6 @@ mat-form-field {
 :host ::ng-deep label.mat-form-field-label:not(.mat-empty) {
     display: none;
 }
-
 
 .ddOption {
     height: 40px;
