--- a/src/app/custom-exchange/custom-exchange.component.css
+++ b/src/app/custom-exchange/custom-exchange.component.css
@@ -25,3 +25,20 @@ div.assetsSelection > div.assetDropDowns {
     display: flex;
     flex-direction: row;
 }
+
+/** Material drop-downs */
+.selectedAssetCode {
+    width: 92px;
+    padding-left: 5px;
+}
+
+mat-form-field {
+    margin: 0;
+    border: 1px solid #ccc;
+}
+
+.mat-option {
+    border-bottom: 1px solid #ddd;
+    font-size: .92rem !important;
+    font-family: consolas,"Liberation Mono",courier,monospace;
+}
