--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,35 @@
-#configurationLink {
-    float: right;
-    padding-left: 15px;
+ul
+{
+	list-style:none;
+    display:none;
+	position: absolute;
+	top:100%;
+	right:0;
+	padding-right:20px;
+}
+ul a
+{
+	display:block;
+	text-decoration:none;
+	font-size:1em;
+	line-height:32px;
+    padding:0 15px;
+    float:right;
+}
+ul li
+{
+	float:none;
 }
 
-#myExchangesLink {
-    float: right;
+#tools_nav_wrap:hover > ul
+{
+	display:block
+}
+
+
+a.top-menu-link {
+    float: right;    
+    padding-left: 15px;
 }
 
 footer#footer {
