--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,7 @@
                 <a class="link top-menu-link" id="toolsLink">Tools</a>
                 <ul>
                     <li><a routerLink="/liveTrades" class="link">Live Trades</a></li>
-                    <li><a href="#" class="link">Short</a></li>
-                    <li><a href="#" class="link">sub menu item label</a></li>
+                    <li><a routerLink="/analyze" class="link">Exchange Analytics</a></li>
                 </ul>
             </nav>
             <a routerLink="/configuration" class="link top-menu-link" id="configurationLink">Configuration</a>
@@ -28,6 +27,6 @@
 <footer id="footer">
     <div class="container">
         <span>Only for information. Accuracy of data is not guaranteed. No investment or trading decision should be made based on this page.<br/>
-                Got something to say? Send me a MEMO to GASJBQBTC4C5J7X24C4Q7S6IKMMK3HKWBX4WMJYEQUW7OKMKNNDRK3J7. v19.04.12</span>
+                Got something to say? Send me a MEMO to GASJBQBTC4C5J7X24C4Q7S6IKMMK3HKWBX4WMJYEQUW7OKMKNNDRK3J7. v19.04.16</span>
     </div>
 </footer>
