Menu bar CSS (#18)
* Update Angular, Typescript and Karma to latest versions

* New component for live stream of trades, so far empty

* Top menu styling

* Trades stream. Not styled yet.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,38 @@
-#configurationLink {
-    float: right;
-    padding-left: 15px;
+#tools_nav_wrap:hover > ul
+{
+	display:block
 }
 
-#myExchangesLink {
-    float: right;
+#tools_nav_wrap > ul
+{
+	list-style:none;
+    display:none;
+	position: absolute;
+	top: 50px;  /*50px is height of the top menu bar*/
+    right:0;
+    z-index: 1;
+    margin-right:30px;
+    background-color: rgb(246, 246, 246);
+    border: 1px solid #8396a0;
+    padding: 0;
+}
+#tools_nav_wrap > ul a
+{
+	display:block;
+	text-decoration:none;
+	font-size:1em;
+	line-height:32px;
+    padding:0 15px;
+    float:right;
+}
+#tools_nav_wrap > ul li
+{
+	float:none;
+}
+
+a.top-menu-link {
+    float: right;    
+    padding-left: 15px;
 }
 
 footer#footer {
