--- a/src/app/live-trades/live-trades.component.html
+++ b/src/app/live-trades/live-trades.component.html
@@ -1,10 +1,16 @@
-
-<ul>
-    <li *ngFor="let item of items">
-        {{item.actionName }}
-        {{ item.baseAmount }} <a class="link inline-link" href="{{item.baseLink}}" target="exchTab">{{item.baseAssetCode}}</a>
-        for
-        {{item.counterAmount}} <a class="link inline-link" href="{{item.counterLink}}" target="exchTab">{{item.counterAssetCode}}</a>
-        {{item.note}}
-    </li>
-</ul>
+<div class="live-trades-wrapper">
+    <div class="trade-stream col-lg-6 col-md-6 col-sm-12">
+        <ul>
+            <li *ngFor="let item of items" class="highlight">
+                {{item.actionName }}
+                {{ item.baseAmount }} <a class="link inline-link" href="{{item.baseLink}}" target="exchTab">{{item.baseAssetCode}}</a>
+                for
+                {{item.counterAmount}} <a class="link inline-link" href="{{item.counterLink}}" target="exchTab">{{item.counterAssetCode}}</a>
+                {{item.note}}
+            </li>
+        </ul>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12" style="border: 1px solid red;">
+        Assets traded in past {{duration}} (TODO: better time resolution):<br/>
+    </div>
+</div>
