--- a/src/app/live-trades/live-trades.component.html
+++ b/src/app/live-trades/live-trades.component.html
@@ -3,14 +3,12 @@
         <ul>
             <li *ngFor="let item of items" class="highlight">
                 {{item.actionName }}
-                {{ item.baseAmount }} <a class="link inline-link" href="{{item.baseLink}}" target="exchTab">{{item.baseAssetCode}}</a>
-                for
-                {{item.counterAmount}} <a class="link inline-link" href="{{item.counterLink}}" target="exchTab">{{item.counterAssetCode}}</a>
+                <a class="link inline-link" href="{{item.linkHref}}" target="exchTab">{{item.linkText}}</a>
                 {{item.note}}
             </li>
         </ul>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12" style="border: 1px solid red;">
-        Assets traded in past {{duration}} (TODO: better time resolution):<br/>
+        Assets traded in past {{duration}}:<br/>
     </div>
 </div>
