Styling live trades statistics

--- a/src/app/live-trades/live-trades.component.css
+++ b/src/app/live-trades/live-trades.component.css
@@ -19,3 +19,12 @@ a.inline-link {
 :host ::ng-deep li.highlight {
     animation: animateGreen 1s linear 1;
 }
+
+div.asset-stat {
+    margin-top: 5px;
+}
+
+ img.asset-icon {
+    width: 32px;
+    height: 32px;
+}
