First draft of new custom asset wizard

--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -12,6 +12,15 @@
         <app-custom-issuers (issuersChanged)="customAssets.updateIssuers()"></app-custom-issuers>
     </div>
 </div>
+
+
+<div class="row paddedRow">
+    <div class="col-lg-9 col-md-10 col-sm-12">
+        <app-custom-asset-wizard></app-custom-asset-wizard>
+    </div>
+</div>
+
+
 <div class="row paddedRow" style="margin-bottom: 60px;">
     <div class="col-lg-9 col-md-10 col-sm-12">
         <app-custom-assets #customAssets></app-custom-assets>
